// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bunch Model removeTiles throws an error if there are less than number of requested tiles 1`] = `"The bunch has less than 4 tiles"`;

exports[`Bunch Model removeTiles throws an error if there is less than 1 requested tile 1`] = `"The bunch has less than 1 tile"`;

exports[`Bunch Model reset generates tiles with multiplier of 1 when <= 4 players 1`] = `
Array [
  Object {
    "id": "A0",
    "letter": "A",
  },
  Object {
    "id": "A1",
    "letter": "A",
  },
  Object {
    "id": "B0",
    "letter": "B",
  },
  Object {
    "id": "B1",
    "letter": "B",
  },
  Object {
    "id": "B2",
    "letter": "B",
  },
  Object {
    "id": "B3",
    "letter": "B",
  },
  Object {
    "id": "B4",
    "letter": "B",
  },
]
`;

exports[`Bunch Model reset generates tiles with multiplier of 2 when > 4 players 1`] = `
Array [
  Object {
    "id": "A0",
    "letter": "A",
  },
  Object {
    "id": "A1",
    "letter": "A",
  },
  Object {
    "id": "A2",
    "letter": "A",
  },
  Object {
    "id": "A3",
    "letter": "A",
  },
  Object {
    "id": "B0",
    "letter": "B",
  },
  Object {
    "id": "B1",
    "letter": "B",
  },
  Object {
    "id": "B2",
    "letter": "B",
  },
  Object {
    "id": "B3",
    "letter": "B",
  },
  Object {
    "id": "B4",
    "letter": "B",
  },
  Object {
    "id": "B5",
    "letter": "B",
  },
  Object {
    "id": "B6",
    "letter": "B",
  },
  Object {
    "id": "B7",
    "letter": "B",
  },
  Object {
    "id": "B8",
    "letter": "B",
  },
  Object {
    "id": "B9",
    "letter": "B",
  },
]
`;

exports[`Bunch Model toJSON returns fields converted to JSON 1`] = `
Array [
  Object {
    "id": "A1",
    "letter": "A",
  },
]
`;
